fix the gap in profile section

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -80,7 +80,7 @@
     gap: 1rem;
     flex-direction: column;
     align-items: center;
-    padding-top: 0;
+    height: fit-content;
   }
   article {
     font-size: 1rem;
